Fix tablet responsiveness for 3D map UI

--- a/app/globals.css
+++ b/app/globals.css
@@ -50,7 +50,7 @@ body {
   .hex-compass {
     @apply fixed z-30 w-28 h-28
       top-2 left-1/2 -translate-x-1/2
-      md:top-6 md:right-6 md:left-auto md:translate-x-0;
+      lg:top-6 lg:right-6 lg:left-auto lg:translate-x-0;
   }
 
   .nav-arrow-btn {
@@ -65,7 +65,7 @@ body {
       z-10
       transition-all
       w-10 h-10 text-lg
-      md:w-14 md:h-14 md:text-xl;
+      lg:w-14 lg:h-14 lg:text-xl;
   }
 
   .nav-arrow-btn-enabled {
